--- a/AudioPlayer/AudioPlayer.csproj
+++ b/AudioPlayer/AudioPlayer.csproj
@@ -114,6 +114,12 @@
     <Content Include="Assets\button_right.png" />
     <Content Include="Assets\button_stop.png" />
     <Content Include="Assets\cloud-icon.png" />
+    <Content Include="Assets\Logo.scale-240.png" />
+    <Content Include="Assets\SmallLogo.scale-240.png" />
+    <Content Include="Assets\SplashScreen.scale-240.png" />
+    <Content Include="Assets\Square71x71Logo.scale-240.png" />
+    <Content Include="Assets\StoreLogo.scale-240.png" />
+    <Content Include="Assets\WideLogo.scale-240.png" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
