--- a/AudioPlayer/AudioPlayer.csproj
+++ b/AudioPlayer/AudioPlayer.csproj
@@ -114,6 +114,7 @@
     <Content Include="Assets\button_right.png" />
     <Content Include="Assets\button_stop.png" />
     <Content Include="Assets\cloud-icon.png" />
+    <Content Include="Assets\LoadButton.png" />
     <Content Include="Assets\Logo.scale-240.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
     <Content Include="Assets\SplashScreen.scale-240.png" />
