--- a/AudioPlayer/AudioPlayer.csproj
+++ b/AudioPlayer/AudioPlayer.csproj
@@ -120,6 +120,7 @@
     <Content Include="Assets\cloud-icon.png" />
     <Content Include="Assets\LoadButton.png" />
     <Content Include="Assets\Logo.scale-240.png" />
+    <Content Include="Assets\Save-Playlis-Icon.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
     <Content Include="Assets\SplashScreen.scale-240.png" />
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
