--- a/AudioPlayer/AudioPlayer.csproj
+++ b/AudioPlayer/AudioPlayer.csproj
@@ -88,8 +88,15 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PopUpWindowLoad.xaml.cs">
+      <DependentUpon>PopUpWindowLoad.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PopUpWindowSave.xaml.cs">
+      <DependentUpon>PopUpWindowSave.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BaseVM.cs" />
+    <Compile Include="ViewModels\Playlist.cs" />
     <Compile Include="ViewModels\PlaylistVM.cs" />
     <Compile Include="ViewModels\Song.cs" />
   </ItemGroup>
@@ -107,6 +114,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="PopUpWindowLoad.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PopUpWindowSave.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\MainStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -116,19 +131,29 @@
   <ItemGroup>
     <Content Include="Assets\button_delete.png" />
     <Content Include="Assets\button_left.png" />
+    <Content Include="Assets\button_load_playlist.png" />
     <Content Include="Assets\button_pause.png" />
     <Content Include="Assets\button_play.png" />
     <Content Include="Assets\button_right.png" />
+    <Content Include="Assets\button_save_playlist.png" />
     <Content Include="Assets\button_stop.png" />
     <Content Include="Assets\cloud-icon.png" />
     <Content Include="Assets\LoadButton.png" />
     <Content Include="Assets\Logo.scale-240.png" />
-    <Content Include="Assets\Save-Playlis-Icon.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
     <Content Include="Assets\SplashScreen.scale-240.png" />
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\portable-net45+wp80+win8+wpa81+dnxcore50\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
